Stable version without ride
To test the app in school i needed to hide the button 'Ride' of the menus (student and responsible). Our objective is to analyze the impact of the app on students and school.

--- a/app/src/main/res/layout/menu_responsible.xml
+++ b/app/src/main/res/layout/menu_responsible.xml
@@ -13,6 +13,7 @@
         android:paddingBottom="5dp"
         android:paddingTop="5dp">
 
+        <!--Icon Notices-->
         <ImageView
             android:contentDescription="@string/icon_notices"
             android:src="@drawable/newspaper_b"
@@ -23,6 +24,7 @@
             android:layout_weight="1"
             android:padding="7sp"/>
 
+        <!--Icon Ride-->
         <ImageView
             android:contentDescription="@string/icon_ride"
             android:onClick="menuIconRedirect"
@@ -30,9 +32,11 @@
             android:layout_height="40sp"
             android:layout_width="40sp"
             android:id="@+id/iconRide"
+            android:visibility="gone"
             android:layout_weight="1"
             android:padding="10.1sp"/>
 
+        <!--Icon Account-->
         <ImageView
             android:contentDescription="@string/icon_account"
             android:onClick="menuIconRedirect"
