--- a/app/src/main/res/layout/menu_student.xml
+++ b/app/src/main/res/layout/menu_student.xml
@@ -13,44 +13,49 @@
         android:paddingBottom="5dp"
         android:paddingTop="5dp">
 
-            <ImageView
-                android:contentDescription="@string/icon_notices"
-                android:src="@drawable/newspaper_b"
-                android:onClick="menuIconRedirect"
-                android:layout_height="40sp"
-                android:layout_width="40sp"
-                android:id="@+id/iconNews"
-                android:layout_weight="1"
-                android:padding="7sp"/>
+        <!--Icon Notices-->
+        <ImageView
+            android:contentDescription="@string/icon_notices"
+            android:src="@drawable/newspaper_b"
+            android:onClick="menuIconRedirect"
+            android:layout_height="40sp"
+            android:layout_width="40sp"
+            android:id="@+id/iconNews"
+            android:layout_weight="1"
+            android:padding="7sp"/>
 
-            <ImageView
-                android:contentDescription="@string/icon_talkUs"
-                android:onClick="menuIconRedirect"
-                android:src="@drawable/speaker_b"
-                android:id="@+id/iconTalkUs"
-                android:layout_height="40sp"
-                android:layout_width="40sp"
-                android:layout_weight="1"
-                android:padding="7sp"/>
+        <!--Icon Talk with us-->
+        <ImageView
+            android:contentDescription="@string/icon_talkUs"
+            android:onClick="menuIconRedirect"
+            android:src="@drawable/speaker_b"
+            android:id="@+id/iconTalkUs"
+            android:layout_height="40sp"
+            android:layout_width="40sp"
+            android:layout_weight="1"
+            android:padding="7sp"/>
 
-            <ImageView
-                android:contentDescription="@string/icon_ride"
-                android:onClick="menuIconRedirect"
-                android:src="@drawable/car_b"
-                android:layout_height="40sp"
-                android:layout_width="40sp"
-                android:id="@+id/iconRide"
-                android:layout_weight="1"
-                android:padding="10.1sp"/>
+        <!--Icon Ride-->
+        <ImageView
+            android:contentDescription="@string/icon_ride"
+            android:onClick="menuIconRedirect"
+            android:src="@drawable/car_b"
+            android:layout_height="40sp"
+            android:layout_width="40sp"
+            android:id="@+id/iconRide"
+            android:visibility="gone"
+            android:layout_weight="1"
+            android:padding="10.1sp"/>
 
-            <ImageView
-                android:contentDescription="@string/icon_account"
-                android:onClick="menuIconRedirect"
-                android:src="@drawable/account_b"
-                android:id="@+id/iconAccount"
-                android:layout_height="40sp"
-                android:layout_width="40sp"
-                android:layout_weight="1"
-                android:padding="8sp"/>
+        <!--Icon Account-->
+        <ImageView
+            android:contentDescription="@string/icon_account"
+            android:onClick="menuIconRedirect"
+            android:src="@drawable/account_b"
+            android:id="@+id/iconAccount"
+            android:layout_height="40sp"
+            android:layout_width="40sp"
+            android:layout_weight="1"
+            android:padding="8sp"/>
     </LinearLayout>
 </RelativeLayout>
