--- a/app/src/main/res/layout/view_main.xml
+++ b/app/src/main/res/layout/view_main.xml
@@ -16,6 +16,7 @@
         <ImageView
             android:contentDescription="@string/logo_description"
             android:src="@drawable/icone_logo_meinforme"
+            android:layout_marginBottom="15sp"
             android:layout_gravity="center"
             android:layout_height="100sp"
             android:layout_width="100sp"
